# decoding-DG

./: ._data  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  build_docker.sh  docker-compose.yml  pyproject.toml  run_docker.sh
Modules/: analysis.ipynb  decoder.py  func.py
Test/: test_linear_gaussian.py
examples/: ridge_regression.py
modules/: decoder.py  encoder.py  func.py  infoMetrics.py  util.py
modules/dataloader/: README.md  __init__.py  dataset.py
modules/examples/: ridge_regression.py  ridge_regression_no_disc_coord.py  ridge_regression_past_coordinates.py  ridge_regression_raw_data.py  ridge_regression_sum_spikes.py
modules/metrics/: __init__.py  _infomation.py  _regression.py  _scorer.py
modules/model_selection/: __init__.py  _search.py  _sigtest.py  _split.py
modules/rocket/: __init__.py  _kernels.py  _rocket.py  base.py
modules/utils/: plot_utils.py  util.py
notebooks/: README.md  analysis.ipynb  analysis_basic_ridge.ipynb  analysis_decoder.ipynb  analysis_info_MI.ipynb  analysis_ridge.ipynb  analysis_rr_raw_data.ipynb  analysis_rr_summed_spikes.ipynb
notebooks/00-data-preparation/: 01-excel-to-csv.ipynb
notebooks/03-past-coordinates/: 03-analysis.ipynb  param.py
notebooks/1-data-preparation/: 01-excel-to-csv.ipynb  xlsx2csv.py
notebooks/10-implement-ridge-regression-raw-data/: 02-analysis-rr-raw-data.ipynb
notebooks/4-individual-analysis/: 01-place-cell-ratio.ipynb  (+4 more)
tests/: test_decoder.py  test_func.py  test_info_metrics.py  test_linear_gaussian.py  test_linear_gaussian_ridge.py  test_ridge_regression.py
(+213 files in other folders)
